[gd_scene load_steps=20 format=2]

[ext_resource path="res://Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Wall.gd" type="Script" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ball.gd" type="Script" id=4]
[ext_resource path="res://enemywall.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemywall.gd" type="Script" id=6]
[ext_resource path="res://tinywall.tscn" type="PackedScene" id=7]
[ext_resource path="res://tinywall.gd" type="Script" id=8]
[ext_resource path="res://Area.tscn" type="PackedScene" id=9]
[ext_resource path="res://MeshInstance.gd" type="Script" id=10]
[ext_resource path="res://KinematicBody2.gd" type="Script" id=11]
[ext_resource path="res://Raleway-ExtraLight.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Label.gd" type="Script" id=13]
[ext_resource path="res://Restart.png" type="Texture" id=14]
[ext_resource path="res://Pause.png" type="Texture" id=15]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.94902, 0.72549, 0.592157, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="DynamicFont" id=4]
size = 72
outline_color = Color( 0.854902, 0.552941, 0.0509804, 1 )
font_data = ExtResource( 12 )

[node name="Main" type="Spatial"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Wall1" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 0.314, 0.35, 0 )
script = ExtResource( 2 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.2, 4.59288, 1.83753 )
script = ExtResource( 4 )

[node name="EnemyWalls" type="Node" parent="."]

[node name="enemy" parent="EnemyWalls" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.077534, 3.23966, 0 )
script = ExtResource( 6 )

[node name="enemy2" parent="EnemyWalls" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.077534, 3.23966, 0 )
script = ExtResource( 6 )

[node name="enemy3" parent="EnemyWalls" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.077534, 3.23966, 0 )
script = ExtResource( 6 )

[node name="enemy4" parent="EnemyWalls" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.077534, 3.23966, 0 )
script = ExtResource( 6 )

[node name="TinyWalls" type="Node" parent="."]

[node name="Spatial" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial4" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial5" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial6" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial7" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial16" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial17" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial18" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial19" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial14" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial15" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, -1.48097, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial2" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, 0, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial8" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, 0, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial11" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, 0, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial12" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, 0, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial13" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, 0, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial9" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, 0, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial10" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499631, 0.0191953, 0, -0.0191953, 0.499631, 0, 0, 1.23331 )
script = ExtResource( 8 )

[node name="Spatial3" parent="TinyWalls" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.499752, -0.0157382, 0, 0.0157382, 0.499752, 0, 2.7117, -0.41337 )
script = ExtResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.0142509, 0.599924, -0.79993, -0.00734071, 0.800053, 0.599885, 0.999872, -0.00267681, 0.0158053, -2.70904, 5.7804, 0.249236 )
shadow_enabled = true
directional_shadow_split_1 = 0.01
directional_shadow_split_2 = 1.0
directional_shadow_split_3 = 1.0
directional_shadow_normal_bias = 0.0

[node name="Area" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.73343, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 15, 0, 0, 0, 15, 2.23678, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 10 )

[node name="KinematicBody2" type="KinematicBody" parent="."]
script = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.72346, 0 )
shape = SubResource( 3 )

[node name="Camera" type="Camera" parent="KinematicBody2"]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, -11, 0, 0 )
fov = 37.8

[node name="Label" type="Label" parent="."]
margin_left = 470.0
margin_top = 140.0
margin_right = 640.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
script = ExtResource( 13 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 860, 0 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 14 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 6.10352e-005, 0 )
scale = Vector2( 0.75, 0.75 )
normal = ExtResource( 15 )
[connection signal="body_entered" from="EnemyWalls/enemy" to="Ball" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="EnemyWalls/enemy" to="EnemyWalls/enemy" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="EnemyWalls/enemy2" to="Ball" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="EnemyWalls/enemy3" to="Ball" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="EnemyWalls/enemy4" to="Ball" method="_on_enemy_body_entered"]
[connection signal="body_entered" from="Area" to="Ball" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area" to="TinyWalls/Spatial" method="_on_Area_body_entered"]
[connection signal="pressed" from="TouchScreenButton" to="Ball" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton2" to="Ball" method="_on_TouchScreenButton2_released"]
